Add support for city issues and traffic cameras